2011-02-08  vadim  <vadim@netcitadel.com>

	* configlets/bsd/update_bridge: fixes #2042 "add configlet and
	shell functions to manage bridge interfaces via shell script on
	OpenBSD and FreeBSD". Bridge interfaces are managed incrementally,
	that is, the script creates and destroys them as needed, then adds
	or removes bridge ports, to bring bridge configuration in sync
	with what is defined in fwbuilder GUI.

	* CompilerDriver_pf_run.cpp (run): fixes #2054 "Add support for
	load anchor PF command". Instead of loading anchors using "pfctl
	-a anchor -f file" command in the .fw initialization script, now
	generated PF configuration uses "load anchor" commands in the
	pf.conf file. This way, we can load anchors correctly when PF
	configuration is activated from the generated rc.conf.local file
	where only one pf.conf file can be referenced.

2011-02-07  Vadim Kurland  <vadim@netcitadel.com>

	* CompilerDriver_pix_run.cpp (run): fixes #2055 "Compiler shows
	success, but there was a fatal error in the config". The bug has
	been introduced recently (in 4.2.0) and really affected all
	compilers.

	* AddressTableDialog.cpp (browse): fixes #1914 "Address table
	object file name is not created properly if user clicks outside
	Editor panel"

2011-02-06  vadim  <vadim@netcitadel.com>

	* SSHUnx.cpp (SSHUnx): fixes #2049 "Installer reports success even
	if there was an error while creating static routes". Added our own
	error message generated when command used to add static route
	fails to the list of error messages recognized by the installer.

	* OSConfigurator_freebsd.cpp (updateBridgeOfInterface): see #1889, #2043
	Added support for bridge interface configuration in BSD.

2011-02-05  vadim  <vadim@netcitadel.com>

	* SSHUnx.cpp (SSHUnx): see #2039 "Installer reports success even
	if pfctl can't load config file". Added more pfctl error messages
	to the list to make code more robust.

	* CompilerDriver_pf.cpp (printStaticOptions): fixes #2038 "pfctl