@@ -152,6 +152,7 @@ int main(int argc, char **argv)
         }
         driver.compile();
         delete objdb;
+
         return (driver.getStatus() == BaseCompiler::FWCOMPILER_SUCCESS) ? 0 : 1;
 
     } catch(const FWException &ex) 
